--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta content="#000000" name="theme-color" />
-  <meta content="Web site created using create-react-app" name="description" />
+  <meta content="Bridging the gap" name="description" />
   <!--    Lato Google Font -->
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Kio</title>
 </head>
 
 <body>
